archive/kubernetes/apps/_base/security/authelia/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: authelia-route
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns-managed: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: wildcard-domain-https
  hostnames:
    - "auth.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authelia
          port: 80
